--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "threadbound"
-version = "0.1.5"
-authors = ["David Tolnay <dtolnay@gmail.com>"]
+version = "0.1.0"
+authors = ["David Tolnay <dtolnay@gmail.com>", "Junghyun Nam <hyun@cro.sh>"]
 categories = ["concurrency", "rust-patterns"]
-description = "Make any value Sync but only available on its original thread."
-documentation = "https://docs.rs/threadbound"
+description = "Make any value Send + Sync but only available on its original thread. Don't use on multi-threaded environments!"
+documentation = "https://docs.rs/threadalone"
 edition = "2018"
 keywords = ["sync"]
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/dtolnay/threadbound"
+repository = "https://github.com/cr0sh/threadalone"
 rust-version = "1.31"
 
 [lib]
