--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,8 @@ rust-version = "1.31"
 [lib]
 doc-scrape-examples = false
 
+[dependencies]
+pin-project = "1.0.12"
+
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
